--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,6 +14,7 @@ button{
 
 .menu-list{
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 .navbar{
@@ -21,6 +22,20 @@ button{
     justify-content: center;
 }
 .main-container{
-    width : 300px;
+    margin: 50px;
+    min-width : 40%;
     display: flex;
+    flex: 3;
 }
+.food-image{
+flex :1;
+}
+.food-description{
+    flex: 2;
+}
+.item-head{
+    display: flex;
+    justify-content: space-between;
+}
+
+
